# NonNewton_test

./: CMakeLists.txt  NonNewton.h  README  auto.bat  auto_Casson.bat  auto_Cross.bat  auto_PowerLaw.bat  draw.py  draw_base.py  test_NonNewton_new.py  test_nonNewton.cpp
Utils/: mathUtils.h
scripts/: draw_Casson.py  draw_Cross.py  draw_PowerLaw.py  draw_all.py  draw_base.py
standalone_tests/: CMakeLists.txt  modelBase.h
standalone_tests/Carreau/: CMakeLists.txt  draw_Carreau.py  test_Carreau.cpp
standalone_tests/Casson/: CMakeLists.txt  draw_Casson.py  test_Casson.cpp
standalone_tests/Cross/: CMakeLists.txt  draw_Cross.py  test_Cross.cpp
standalone_tests/PowerLaw/: CMakeLists.txt  draw_PowerLaw.py  test_PowerLaw.cpp
